--- a/A1-Brouwer/a1Testing.yml
+++ b/A1-Brouwer/a1Testing.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Run testbot on project branch
         run: |
-          M2 --script test/gwTypeTest.m2
+          M2 --script tests/gwTypeTest.m2
